TIMR-805 - Fixed Select2 dropdowns overlapping header

--- a/OpenIZMobile.Applets/css/theme.css
+++ b/OpenIZMobile.Applets/css/theme.css
@@ -1654,3 +1654,7 @@ fieldset[disabled] .btn-danger.active {
     pointer-events: none;
     color: grey !important;
 }
+
+.select2-dropdown {
+    z-index: 99 !important;
+}
